removed appendix, leftover example citations and trimmed bg and related work sections

--- a/mainmatter/03_related_work.tex
+++ b/mainmatter/03_related_work.tex
@@ -4,19 +4,9 @@
 \chapter{Related Work}
 \label{cha:related_work}
 
-This chapter discusses other works in related areas and considers the nuances of their approaches and how they differ from the one presented in this thesis. First there will be a discussion of select pieces of literature which use reinforcement learning approaches to address similar problems. Then two papers related specifically to resource management within the context of scientific workflows will be considered.
+This chapter discusses other works in related areas and considers the nuances of their approaches and how they differ from the one presented in this thesis. First there will be a discussion of select pieces of literature which use reinforcement learning approaches to address similar problems. Then three papers related specifically to resource management within the context of scientific workflows will be considered.
 
 %%=========================================
-\section{Using Reinforcement Learning to Schedule Tasks/Jobs in Clusters}
-\label{sec:rl_scheduling}
-
-In \cite{learningToSchedule} the researchers use reinforcement learning to schedule data-parallel processing jobs in shared clusters. In particular they considered resource management systems such as YARN or Mesos. Their approach was to schedule the jobs based on co-location goodness, which is a metric for how well a job can share the resources of the machine on which it is scheduled with another job. This metric was based on CPU usage and disk and network Input/Output (I/O) since these two activities tend to be very compatible- while one job waits on the disk or network another job can be free to use the CPU and vice versa. The paper considered three different scheduling approaches: first in first out (FIFO), a gradient bandit which starts new each time and a gradient bandit which is starts with the data from previous runs. In the end the best performing approach was the bandit which had the benefit of the data from previous runs. This was because that bandit skipped the exploration phase, during which bandits sacrifice performance for learning, by virtue of having the previous runs' data. This gradient bandit approach was then incorporated into three different schedulers called Mary, Hugo and Hugo*.  Mary schedules based on co-location goodness, Hugo extends this by aggregating jobs into groups based on their similarities and scheduling the groups, and Hugo* does the same as Hugo but also considers how long a task has been waiting. 
-
-This paper does have a quite a few similarities with the approach used in this thesis. Notably they both use an approach based on Gradient Bandits and both use the data from previous runs. However the similarities end there, as the paper was concerned with scheduling within clusters based on co-location goodness whereas this thesis only looks at resource allocation for indin tasks are vidual tasks. 
-
-In the SCARL paper (\cite{scarl}) researchers use reinforcement learning for scheduling jobs among machines with heterogeneous resources. Their approach (which is named SCARL) was based on combining attentive representation and the policy-gradient method. Attentive representation is a technique for focusing attention more quickly within a neural network. The model which they used to represent the problem used the allocation of jobs to machines as the state whilst the available actions at any given point were the scheduling of jobs. The reward function was based on a slowdown metric: $(elapsed\_time * penalty\_ factor) / computation\_time$. Ultimately the researchers found that for high levels of heterogeneity SCARL outperformed the shortest job first (SJF) metric by 10\% and for lower levels of heterogeneity it outperformed it by 4 \%.
-
-Once again the obvious difference between the paper and this thesis is that the paper concerns itself with scheduling as opposed to resource allocation, however there is also a large difference in the methods used to approach the problem because of the use of a neural network, and the fact that SCARL attempts to consider the heterogeneity of the resources as well. 
 
 \section{Using Reinforcement Learning to Allocate Resources}
  \label{sec:rl_allocation}
@@ -51,7 +41,7 @@ This idea also served as inspiration for the naive approach used here, namely th
 \section{Summary of Similarities and Points of Interest in these Works}
 \label{sec:takeaways}
 
-All of the papers discussed in sections \ref{sec:rl_scheduling} and \ref{sec:rl_allocation} managed to utilize reinforcement learning in an administrative fashion to improve the performance of jobs in their respective computing environments. A common theme among the papers concerned with resource utilization was to limit the action space to increasing, decreasing or keeping the current allocation or resources and storing the current allocation as the agent’s state. The majority of the papers also utilized neural networks and it is also worth noting that most of them used runtime in their reward functions. A key difference between all of the above papers and this thesis is that these papers handled the direct allocation of resources among the machines in their environment to tasks or jobs, whereas in a scientific workflow management system the tasks are given a resource allocation by the SWMS and this is then passed on to a platform or cluster management software which handles the actual allocation of the job to a machine. Indeed it is possible for these two learning systems to interact with one another without knowing it.
+All of the papers discussed in section \ref{sec:rl_allocation} managed to utilize reinforcement learning in an administrative fashion to improve the performance of jobs in their respective computing environments. A common theme among the papers concerned with resource utilization was to limit the action space to increasing, decreasing or keeping the current allocation or resources and storing the current allocation as the agent’s state. The majority of the papers also utilized neural networks and it is also worth noting that most of them used runtime in their reward functions. A key difference between all of the above papers and this thesis is that these papers handled the direct allocation of resources among the machines in their environment to tasks or jobs, whereas in a scientific workflow management system the tasks are given a resource allocation by the SWMS and this is then passed on to a platform or cluster management software which handles the actual allocation of the job to a machine. Indeed it is possible for these two learning systems to interact with one another without knowing it.
 
 In section \ref{sec:workflow_allocation_papers} the topic of resource management in scientific workflows was looked at and the papers mentioned all tended to use more analytical approaches. Indeed there is relatively limited literature regarding combining machine learning and scientific workflow management. A consistent theme in the papers about sizing tasks in scientific workflows is the idea that a task’s resource requirements are relatively static and can be learned over time using linear regression or profiling.  One topic which is not really addressed in these papers is the relationship between resource assignment and performance, because assigning a task more resources (which may be less efficient) can still speed up performance. This is an important topic in this thesis and the papers \cite{FeedbackBasedAllocation} and \cite{tovarjob} do not mention runtime, while \cite{tarema} does not deal with task sizing. In this thesis the effect of task sizing on workflow performance is an delicate tradeoff which must be balanced correctly to both reduce resource wastage and maintain reasonable runtimes and improve (or at least not harm) workflow performance.
 
