added feedback loop results

--- a/mainmatter/05_evaluation.tex
+++ b/mainmatter/05_evaluation.tex
@@ -35,23 +35,9 @@ For the final comparison in the evaluation chapter the 10 runs with the default 
 
 \begin{figure}
     \centering
-        \includegraphics[width=\textwidth]{fig/cpu_only_results.png}
-        \caption{Comparison of workflow performance for the approaches which only change CPU}
-        \label{fig:cpu_results}
-\end{figure}
-
-\begin{figure}
-    \centering
         \includegraphics[width=\textwidth]{fig/cpu_mem_results.png}
-        \caption{Comparison of workflow performance for the approaches which change CPU and Memory}
-        \label{fig:mem_results}
-\end{figure}
-
-\begin{figure}
-    \centering
-        \includegraphics[width=\textwidth]{fig/all_results.png}
-        \caption{Performance comparison of all of the approaches}
-        \label{fig:all_results}
+        \caption{Performance of the CPU and Memory Approaches}
+        \label{fig:cpu_results}
 \end{figure}
 
 \begin{figure}
@@ -63,17 +49,16 @@ For the final comparison in the evaluation chapter the 10 runs with the default 
 
 In this section the performance of the gradient bandit and the q-learning approaches over their last 10 runs will be compared with each other and with the performance of 10 runs of the same workflows with their default configuration.
 
-The figures \ref{fig:cpu_results}, \ref{mem_results} and \ref{fig:all_results} show the performance of the different approaches and compare them to the default configuration. The left graph looks at the total amount of CPU hours requested across all of the workflows and the amount of CPU hours that were actually used. The right graph in these 3 figures shows the total time it took for all of the workflows to complete. Finally in \ref{fig:mem_use}, the memory usage is shown. The unit measured is the gigabyte hour and the graphic displays the total amount of gigabyte hours allocated across all of the runs as well as the actual amount of gigabyte hours used (based on the task’s peak RSS and execution time). Since the CPU bandit and the CPU only q-learning approach did not alter memory they are not shown.
+The figures \ref{fig:cpu_results} and \ref{mem_use} show the performance of the 3 different approaches tried as well as the performance of the default configuration. The left graph in the first figure shows the total amount of CPU hours requested by all of the tasks across all of the workflows and the amount of CPU hours that were effectively used (calculated as $cpu\_usage/100*time$ and $cpus*time$ respectively). The right graph in this figure shows the total time it took for all of the workflows to complete. Additionally in \ref{fig:mem_use}, the memory usage is shown. The unit measured in the right graph is the gigabyte hour and the graph displays the total amount of gigabyte hours allocated across all of the workflows as well as the actual amount of gigabyte hours used (based on each task’s peak RSS and execution time- this is the minimum amount of gigabyte hours which could have been assigned without the task being killed). The left graph shows the average memory usage of each individual task (calculated as $\frac{peak\_rss}{memory}$). 
 
-From these graphics it is clear to see that all of the reinforcement learning approaches managed to improve CPU efficiency and allocate less CPU Hours than the default configuration. In the case of the gradient bandits they were both particularly effective at keeping the overall CPU hours assigned to an absolute minimum, however it seems that this efficiency came at the cost of speed and they both performed worse than their q-learning counterparts in this aspect. The q-learning approach for both memory and CPUs was the least efficient (ignoring the default configurations). However this approach was still more efficient than the default configurations and the only approach which was faster than the default configuration. Indeed these figures make it clear that assigning less CPU hours generally seems to have a detrimental effect on runtime (as may be expected) but the change in efficiency is much greater than the change in runtime. Thus it should not be particularly surprising that the fastest agent assigned the most resources of any reinforcement learning approach. 
+From these graphics it is clear to see that all of the reinforcement learning approaches managed to improve CPU efficiency and allocate less CPU Hours than both the default configuration and the naive feedback loop approach. In the case of the gradient bandits it was particularly effective at keeping the overall CPU hours assigned to an absolute minimum, however it seems that this efficiency came at the cost of speed and it performed worse than its q-learning counterpart in this aspect and took slightly longer than the default configuration. The q-learning approach took almost exactly the same amount of time as the feedback loop but was more efficient with regards to CPU usage. As can be seen, both of the reinforcement learning approaches are able to assign less CPU hours without having a detrimental effect on execution time. Looking at the reward function \ref{q_agent_1_reward} for the q-learning agent the “CPU usage”considered by the function is not the task’s usage of the task but rather $max(90,CPU\_usage)$. As such agents for tasks which exhibit very high CPU usage ($>90\%$) receive no additional reward for increased efficiency (since efficiency can always be increased by decreasing the total number of CPUs assigned) so their rewards depend entirely on the execution time and they are thus encouraged to find resource allocations which decrease runtime. This most likely explains why the gradient bandit is more efficient but the q-learning agent is faster. Interestingly, the feedback loop ultimately wound up increasing the effective CPU hours used by the workflows, something which had remained constant under the other 3 configurations, and was fairly efficient in terms of the total amount of CPU hours assigned relative to the increased effective usage. It can only be speculated as to why it used more actual CPU hours than the other approaches but it may be down to the fact that certain highly parallelizable tasks will be assigned incredibly large numbers of CPUs (e.g. a task with 2800\% CPU usage during training will be assigned 28 CPUs), far beyond the point of diminishing returns, and eventually lead to the workflow using more effective CPU hours. This would indicate that assigning more resources may increase the amount actually used (something which the feedback loop approach assumes is false). Finally, regarding execution time, it is interesting to see that the q-learning approach is able to match the performance of the feedback loop despite assigning less CPU hours overall. In this regard the q-learning approach could be considered optimal relative to the other approaches. The gradient bandit ultimately over-emphasized decreasing costs and performed worse whilst the feedback loop approach over-emphasized attempting to increase performance by increasing CPU usage and wound up using more resources than would have been necessary to achieve the same execution time. The q-learning agent was able to find the best balance between resource usage and performance. This is of course the benefit of a reinforcement learning approach- it can estimate the values of a complex reward function by exploring different actions and then learn to pick the maximizing action. The feedback loop approach cannot explore different allocations on its own and is dependent on the correctness of its assumptions and the quality and scope of its input data.
 
-With regards to memory both of the reinforcement learning approaches proved to be significantly better than the default configuration with regards to this resource. One aspect which stands out is firstly how poor the default configurations are. Indeed they are just about using 10\% of the assigned memory and performing even worse on a task by task basis . On the other hand the q-learning approach is not much more efficient however it still reduces the overall amount of wasted memory by a large amount. The best performer by a significant margin is the memory bandit and this approach yields much better results. In fact it assigns less than half as much as either the default configuration or the q-learning agent. 
+Concerning memory allocations, both of the reinforcement learning approaches proved to be better than the default configuration with regards to this resource. One aspect which stands out is how poor the default configurations are. Indeed on average they are using just 5\% of the assigned memory on a task by task basis . On the other hand the q-learning approach is not much more efficient however it still reduces the overall amount of wasted memory by a large amount (~5000 gigabyte hours). Yet this amount is dwarfed by the other two approaches which save close to 15000 gigabyte hours. The memory bandit approach performed much better than the q-learning approach by a significant margin and it assigned less than half as much as either the default configuration or the q-learning agent. The feedback loop approach is clearly the best, assigning the least amount of memory hours overall and showing very high memory usage for all of the tasks. Ultimately the performance of the q-learning agent is down to the fact that the number of chunks of memory it could assign was very low, in order to have less states so it could be trained faster, and thus it had a fairly limited extent to which it could reduce the memory usage. The gradient bandit suffers from this too because ultimately it also only had a fixed number of memory chunks to choose from and thus could only increase or decrease a task’s memory usage by the size of the chunk. The feedback loop does not have this problem and can assign memory at the most granular level possible. It therefore follows that it would naturally be able to outperform these two approaches which can only assign “discrete” chunks of memory.
 
-A noticeable trend is that both of the approaches which also reduce memory are able to achieve much better total runtimes than the other two approaches which only alter CPU. This is clearly down to the large overestimations for memory use contained in the default configuration. Since nextflow only executes tasks whose resource requirements can be fulfilled by the unassigned resources which remain available to the execution platform, the excessive memory requests from the tasks in the default configuration were most likely preventing other tasks from executing and by re-sizing these requests, the two memory altering approaches were able to achieve greater task throughput and reduced runtimes. In closing it should also be pointed out the both of the q-learning approaches were faster but less efficient with CPU hours than their gradient bandit counterparts and this may be down to the different reward functions used, since the q-learning approaches set a cap on the CPU usage’s influence on the reward function. Looking at the reward functions \ref{q_agent_1_reward} and \ref{q_agent_2_reward} the CPU usage which is used in the function is not the usage of the task but rather $max(90,CPU\_usage)$. As such agent’s for tasks which exhibit very high CPU usage ($>90\%$) receive no additional reward for increased efficiency (since efficiency can always be increased by decreasing the total number of CPUs assigned) so their rewards depend entirely on the execution time and they are thus encouraged to assign more resources and try to decrease runtime.
 
 \subsection{Summary of Results}
 \label{sub:summary}
 
-In conclusion all of the reinforcement learning approaches were able to intelligently size the tasks in the workflows and in the end the overall number of CPU hours which were wasted was reduced. In addition to this the agents were also able to significantly reduce the memory usage. The gradient bandits took slightly longer on average but were much more efficient for that, whilst the q-learning agents struck a better balance between resource efficiency and increased performance and the q-learning approach for both CPU and memory was ultimately able to outperform the default configurations in both efficiency and runtime.
+In conclusion all of the reinforcement learning approaches were able to intelligently size the tasks in the workflows and in the end the overall number of CPU hours which were wasted was reduced (even relative to the feedback loop). In addition to this the agents were also able to significantly reduce the memory usage compared to the default configuration but struggled to reach the near-optimal performance of the feedback loop. The gradient bandits took slightly longer on average but were much more efficient for that, whilst the q-learning agent struck a better balance between resource efficiency and increased performance and the q-learning approach for both CPU and memory was ultimately able to outperform the default configurations in both resource efficiency and runtime.
 
-While it could be argued that the q-learning agents are therefore the “better” options it is hard to say exactly what the right approach is because it also depends on the desires of the user. Many scientists may be prepared to accept slightly longer runtimes if the “greediness” of their workflows is decreased and they are able to free up resources for others to use, or reduce their own costs (if they are paying for CPU hours). Indeed from a financial perspective the gradient bandit wastes significantly less CPU hours than the extra time it takes to complete. However in a situation where the user is paying for the entire system (and not resource usage) it may make more sense from a financial perspective to use the q-learning agent approach since it reduces the amount of time for which the system needs to be up.
+While it could be argued that the q-learning agent is therefore the “better” options it is hard to say exactly what the right approach is because it also depends on the desires of the user. Many scientists may be prepared to accept slightly longer runtimes if the “greediness” of their workflows is decreased and they are able to free up resources for others to use, or reduce their own costs (if they are paying for CPU hours). Indeed from a financial perspective the gradient bandit wastes significantly less CPU hours than the extra time it takes to complete (which is fairly marginal). However in a situation where the user is paying for the entire system (and not resource usage) it may make more sense from a financial perspective to use the q-learning agent approach since it reduces the amount of time for which the system needs to be up since the overall execution time is reduced. Finally, it should be pointed out that combining the feedback loop approach and a q-learning agent which only considers CPU assignments would yield the best overall performance.
